--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
       font-family: 'Roboto', 'Noto', sans-serif;
       line-height: 1.4;
       min-height: 100vh;
+      background:url('./images/backgrounds/back-pattern.svg') 0 0 repeat;
+      background-size:100%;
+      height: 1500px;
     }
 
   </style>
