--- a/src/elements/schedule-day.html
+++ b/src/elements/schedule-day.html
@@ -48,10 +48,18 @@
 
       .session {
         padding: 0 16px;
+
       }
 
       .session[flex] {
         padding: 0 8px;
+        margin-bottom: 8px;
+        margin-top: 8px;
+
+      }
+
+      .sessions-wrapper {
+        flex-wrap: wrap;
       }
 
 
