--- a/src/elements/footer-block.html
+++ b/src/elements/footer-block.html
@@ -19,8 +19,8 @@
     <style include="shared-styles">
       :host {
         display: block;
-        background: var(--footer-background-color, #fcfcfc);
-        color: var(--footer-text-color, #757575);
+        background: var(--footer-background-color, #db4437);
+        color: var(--footer-text-color, #db4437);
         border-top: 1px solid #eee;
         font-size: 14px;
         
