--- a/src/elements/map-block.html
+++ b/src/elements/map-block.html
@@ -167,7 +167,8 @@
             <div class="card-content list">
               <!-- <paper-icon-item disabled> -->
                 <!-- <iron-icon icon="icons:feedback" item-icon></iron-icon> -->
-                <paper-item-body>세종컨벤션센터는 세종대학교에서 아차산의 수려한 자연경관과 도심 속 푸른 숲 어린이대공원이 어우러진 자연감각의 현대적 시설로 편리한 교통과 One-Stop-Service가 제공되는 국제규모의 전문 컨벤션입니다.<br>주차는 지원되지 않습니다.<br>가급적 대중교통을 이용해주세요.</paper-item-body>
+                <paper-item-body>글로벌컨벤션플라자는 글로벌공학교육센터 내 전문 컨벤션 시설로 최대 9개 세션 약 1,000명을 동시에 
+수용할 수 있는 규모를 갖추고 있습니다. 또한, 전면 유리로 된 건물로 각 실에서 관악산의 수려한 경관을 감상하실 수 있습니다. <br>주차는 지원되지 않습니다.<br>가급적 대중교통을 이용해주세요.</paper-item-body>
             </div>
             <div class="card-link">
               <a class="button" href="https://www.google.com/maps/dir/{$ location.pointer.latitude $},{$ location.pointer.longitude $}/@{$ location.pointer.latitude $},{$ location.pointer.longitude $},18z" target="_blank" >Explore Map</a>
