--- a/src/elements/session-element.html
+++ b/src/elements/session-element.html
@@ -305,7 +305,7 @@
           if(Title == "등록")
             return "";
           else if(Title == "Keynote")
-            return "A hall, B hall, C hall";
+            return "대강당";
           else
             return trackName;
         }
