--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -36,8 +36,8 @@
         --secondary-background-color: #FFFFFF;
 
         /* Footer */
-        --footer-background-color:    #fcfcfc;
-        --footer-text-color:          #757575;
+        --footer-background-color:    #db4437;
+        --footer-text-color:          #ffffff;
 
         /* Tags colors */
         --general: #bdbdbd;
