--- a/src/elements/about-block.html
+++ b/src/elements/about-block.html
@@ -15,6 +15,9 @@
 
       .container {
         @apply(--layout-vertical);
+        background-color: #fff;
+        padding:60px 30px;
+        margin:60px auto;
       }
 
       .about-item {
@@ -47,6 +50,16 @@
 
         .about-item:not(:first-of-type) {
           margin-top: 0;
+        }
+      }
+
+      @media (max-width:960px) {
+        .container {
+          flex-flow: column;
+        }
+        .divider {
+          min-height:55px;
+          height:55px;
         }
       }
     </style>
